cgi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: k8s-proj
  name: cgi-deployment
  labels:
    app: cgi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cgi
  template:
    metadata:
      labels:
        app: cgi
      annotations:
        version/config: "2020-08-16 09:34:00"
    spec:
      volumes:
      - name: code
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: cgi-config
          items:
          - key: cgi_nginx_conf
            path: cgi.conf

      containers:
      - name: cgi-fpm
        image: largezhou/k8s-proj-cgi-fpm:1
        ports:
        - name: cgi-fpm
          containerPort: 9000
        volumeMounts:
          - name: code
            mountPath: /app

      - name: cgi-nginx
        image: nginx:1.19.1-alpine
        ports:
        - name: cgi-nginx
          containerPort: 80
        volumeMounts:
          - name: code
            mountPath: /app
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d

---

apiVersion: v1
kind: Service
metadata:
  namespace: k8s-proj
  name: cgi-service
spec:
  selector:
    app: cgi
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: cgi-nginx
    nodePort: 30000
